feat: subiendo ajustes de front
